# bowot-rs

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.nocache  Procfile  config.toml.example  docker-compose-lava.yml  docker-compose.services.yml  docker-compose.yml  sqlx-data.json
.github/workflow/: main.yml
.github/workflows/: awake.yml  deploy.yml  main.yml
migrations/: 20210228140734_guilds.sql  20210228143844_members.sql  20210228145654_triggers.sql  20210228150234_hydrate_reminders.sql
scripts/: build_arm.sh  init_db.sh
src/: cache.rs  constants.rs  data.rs  database.rs  framework.rs  handler.rs  lang.rs  lavalink.rs  main.rs  player.rs  service.rs  services.rs  soundboard.rs  types.rs  voice.rs  ytdl_cache.rs
src/commands/: configuration.rs  economy.rs  fun.rs  games.rs  hydrate.rs  meta.rs  mod.rs  moderation.rs  music.rs  reddit.rs  roleplay.rs  soundboard.rs
src/data/: statuses.txt
src/lang/: ship.txt  subreddit_memes.txt
src/static/: hydrate.txt  pp.txt  statuses.txt
src/templates/: index.hbs
src/utils/: apis.rs  basic_functions.rs  checks.rs  discord.rs  helpers.rs  mod.rs  spotify.rs  valorant.rs  ytdl.rs
