[package]
edition = "2018"
name = "bowot"
version = "1.0.0"

[dependencies]
chrono = "0.4.19"
comfy-table = "1.4.2"
fasteval = "0.2.4"
futures = "0.3.8"
qrcode = "0.12.0"
rand = { version = "0.7.3", features = ["getrandom", "std"] }
regex = "1.4.2"
reqwest = { version = "0.10.10", default-features = false, features = ["json", "rustls-tls", "gzip", "brotli"] }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
tokio = { version = "0.2.22", features = ["full"] }
tracing = "0.1.22"
tracing-log = "0.1.1"
tracing-subscriber = "0.2.15"
tracing-futures = "0.2.4"
wither = { version = "0.9.0-alpha.2", default-features = false, features = ["tokio-runtime"] }
itconfig = "1.0"
lazy_static = "1.4"
strsim = "0.10.0"
html-escape = "0.2.6"
warp = "0.2.5"
handlebars = "3.5.1"
sysinfo = "0.15.3"
audiopus_sys = { version = "0.1.8", features = ["static"] }

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "current"
# version = "0.9.2"
default-features = false
features = [
	"builder",
	"cache",
	"client",
	"framework",
	"gateway",
	"http",
	"model",
	"standard_framework",
	"utils",
	"rustls_backend",
	"absolute_ratelimits",
	"collector",
	"voice",
]

[dependencies.songbird]
features = ["builtin-queue"]
git = "https://github.com/serenity-rs/songbird"
branch = "current"
